--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,5 @@
 <resources>
     <string name="app_name">TaskChampion</string>
     <string name="action_sync">Sync</string>
-    <string name="action_load">Load</string>
-    <string name="action_clear">Clear</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_clear_all">Clear all</string>
 </resources>
