--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">TaskChampion</string>
     <string name="action_sync">Sync</string>
     <string name="action_clear_all">Clear all</string>
+    <string name="action_add">Add</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
