--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_clear_all">Clear all</string>
     <string name="action_add">Add</string>
     <string name="action_done">Done</string>
+    <string name="action_filter_tags">Filter Tags</string>
 </resources>
