--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_set_context">Set Context</string>
 
 
+    <string name="details_description">Description: </string>
     <string name="details_depends">Depends: </string>
     <string name="details_priority">Priority: </string>
     <string name="details_status">Status: </string>
