--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_clear_all">Clear all</string>
     <string name="action_add">Add</string>
     <string name="action_done">Done</string>
+    <string name="action_delete">Delete</string>
     <string name="action_set_context">Set Context</string>
 
 
